[tool.poetry]
name = "tutorial-streamlit-multipage"
version = "0.1.0"
description = ""
authors = ["shgu <shgu@adobe.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.39.0"


[tool.poetry.group.dev.dependencies]
watchdog = "^5.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
